--- a/Hoofdstuk_1/stijl_medailles.css
+++ b/Hoofdstuk_1/stijl_medailles.css
@@ -2,14 +2,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     text-align: center;
-    background-image: url('parijs.jpg');
+    background-image: url(hoofdstuk_1/center.svg) ;
     background-size: cover; 
     background-position: center; 
     font-weight: bold;
 }
 h1 {
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
-    color: #054186;
+    color: #fff;
     font-size: 32px;
     text-align: center;
    
@@ -36,6 +36,7 @@ table{
 
 th{
     font-size: 30px;
+    color: #fff;
 }
 
 th.goud{
@@ -47,3 +48,16 @@ th.zilver{
 th.brons{
     color: brown;
 }
+
+td{
+    font-size: 20px;
+    color: #fff
+}
+.ringen{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 100px;
+    height: auto;
+}
+
