Eerst iets anders geprobeerd, maar dit was te complex... Opnieuw gestart met een ander project.

--- a/Hoofdstuk_1/stijl_medailles.css
+++ b/Hoofdstuk_1/stijl_medailles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     text-align: center;
-    background-image: url(hoofdstuk_1/center.svg) ;
+    background-image: url("center.svg") ;
     background-size: cover; 
     background-position: center; 
     font-weight: bold;
