--- a/Project_3/formulier.css
+++ b/Project_3/formulier.css
@@ -55,10 +55,13 @@ input, select{
 
 a{
     color: lightsteelblue;
+    transition-property: color;
+    transition-timing-function: ease;
+    transition-duration: 1s;
 }
 
 a:hover{
-    color: blue;
+    color: lightskyblue;
 }
 
 button, #submitbutton{
@@ -66,13 +69,28 @@ button, #submitbutton{
     background-color:aliceblue;
     color: lightslategray;
     cursor: pointer;
+    transition-property: background-color;
+    transition-timing-function: ease;
+    transition-duration: 1s;
 }
 
 button:hover{
     background-color: lightpink;
+    transform: scale(1.1 , 1.1);
 
 }
 
 #submitbutton:hover{
     background-color: lightseagreen;
+    animation-name: neerEnVergroot;
+    animation-duration: 5s;
+}
+
+@keyframes neerEnVergroot{
+    from{
+        transform: translateY(0);
+    }
+    to{
+        transform: translateY(10px) scale(1.1, 1.1);
+    }
 }
