--- a/Project_1/medailles.css
+++ b/Project_1/medailles.css
@@ -3,13 +3,13 @@ body {
     font-size: 16px;
     text-align: center;
     background-image: url("images/center.svg") ;
-    background-color: purple; /* Mocht de afbeelding niet werken*/
-    background-size: cover; 
-    background-position: center; 
+    background-color: purple; /* Mocht de afbeelding niet werken. */
+    background-size: cover; /* Background neemt hele pagina in. */
+    background-position: center; /* Backgroudn wordt gecentreerd. */
     font-weight: bold;
 }
 h1 {
-    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif; /* Google font. */
     color: #fff;
     font-size: 32px;
     text-align: center;
