Afbeelding toegevoegd aan een afzonderlijke map

--- a/Project_2/rekensommetjes.css
+++ b/Project_2/rekensommetjes.css
@@ -3,7 +3,7 @@ body{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40px;
     color: #f2cd92;
-    background-image: url(wiskunde.jpg);
+    background-image: url(images/wiskunde.jpg);
     background-size: cover;
     
 }
